--- a/App/Gismeteo.xcodeproj/xcshareddata/xcschemes/Gismeteo.xcscheme
+++ b/App/Gismeteo.xcodeproj/xcshareddata/xcschemes/Gismeteo.xcscheme
@@ -73,6 +73,10 @@
             ReferencedContainer = "container:Gismeteo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <LocationScenarioReference
+         identifier = "Moscow, Russia"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
